# FANs

./: .env  .gitignore  README.md  fix_cuda.sh  pyproject.toml  requirements.txt  run_ec2.py  runner.py
configs/: config.yml  config2.yml  ts_config.yml
signal_gen/: README.md  __init__.py  config.yml  run_signal_gen.py  runner.py
signal_gen/configs/: config2.yml
signal_gen/src/: __init__.py  models.py  signal_gen.py
signal_gen/utils/: config_utils.py  data_utils.py  device_utils.py  efficiency_utils.py  evaluation_utils.py  modelling_utils.py  training_utils.py  visualisation_utils.py
src/: FANLayer.py  __init__.py  attention.py  fan_transformer.py  models.py  modified_transformer.py  phase_offset_transformer.py  signal_gen.py  transformer.py  ts_data.py  ts_models.py
time-series/: README.md  __init__.py  config.yml  run_time_series.py  runner.py
time-series/models/: __init__.py  fan_layers.py  model_registry.py  ts_models.py
time-series/new_results/: README.md  benchmark_models.py  convergence_benchmark.py  phase_offset_benchmark.py
time-series/transformers/: __init__.py  fan_transformer.py  phase_offset_gated_transformer.py  phase_offset_transformer.py
time-series/utils/: config_utils.py  convergence_utils.py  data_utils.py  device_utils.py  efficiency_utils.py  evaluation_utils.py  modelling_utils.py  training_utils.py  visualisation_utils.py
utils/: config_utils.py  data_utils.py  device_utils.py  efficiency_utils.py  evaluation_utils.py  masking.py  modelling_utils.py  training_utils.py  visualisation_utils.py
