[project]
name = "fans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mlflow>=2.20.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.uv.workspace]
members = ["FANs", "FAN"]
